Started creating Payment classes, extra work on console interface.

--- a/ExpenseManager/ExpenseManager/App.config
+++ b/ExpenseManager/ExpenseManager/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="connectionString" value="Data Source=STEVELAPTOP\SQLEXPRESS;Initial Catalog=ExpenseManager;Integrated Security=SSPI;"/>
+    <add key="connectionString" value="Data Source=SERVER03\SQLEXPRESS;Initial Catalog=ExpenseManager;Integrated Security=SSPI;"/>
   </appSettings>
 </configuration>
