--- a/ExpenseManager/ExpenseManager/ExpenseManager.csproj
+++ b/ExpenseManager/ExpenseManager/ExpenseManager.csproj
@@ -54,7 +54,9 @@
     <Compile Include="AddDebt.cs" />
     <Compile Include="AddGeneralExpense.cs" />
     <Compile Include="Bill.cs" />
+    <Compile Include="CancelledPayment.cs" />
     <Compile Include="Debt.cs" />
+    <Compile Include="EFTPayment.cs" />
     <Compile Include="ExpenseManager.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -63,6 +65,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GeneralExpense.cs" />
+    <Compile Include="IncomingPayment.cs" />
+    <Compile Include="OutgoingPayment.cs" />
+    <Compile Include="PaymentStatus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
